# discovergo_notify

./: .gitignore  Dockerfile  README.md  print_current_time.py  requirements.txt  setup.cfg
cdk-discovergo/: app.py
cdk-discovergo/cdk_discovergo/: cdk_discovergo_stack.py
cdk-discovergo/tests/unit/: test_cdk_discovergo_stack.py
lambda_package/black-25.1.0.dist-info/: RECORD
lambda_package/pytest-8.3.5.dist-info/: RECORD
lambda_package/python_dotenv-1.1.0.dist-info/: RECORD
lambda_package/uv-0.7.0.dist-info/: RECORD
lambda_package/websocket_client-1.8.0.dist-info/: RECORD
simple-docker-test/: Dockerfile  dataframe_job.py
src/discovergo_notify/: lambda_function.py  scrape.py
tests/: test_scrape.py
