[metadata]
name = discovergo_notify
version = attr:discovergo_notify.__version__
author = Jonathan Cheng 
author_email = jonchengw@gmail.com
license = MIT
description = Tool to scrape the DiscoverGo website and notify for updates
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.11
install_requires = file: requirements.txt


[options.packages.find]
where=src
